add rooms list
